<resources>
    <string name="app_name">Gmail</string>
    <string name="open">Mở</string>
    <string name="navigation_drawer_open">Open navigation bar</string>
    <string name="navigation_drawer_close">Close navigation bar</string>
    <string name="login">Log in</string>
    <string name="emailSender">Email\n</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to log in</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="usth_mail">USTH Mail</string>
    <string name="search_in_mail">Search in mail</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="please_log_in_with_your_information">Please log in with your information</string>
    <string name="remember_me">Remember me</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="space">Space</string>
    <string name="meet">Meet</string>
    <string name="search_in_chat_and_spaces">Search in chat and spaces</string>
    <string name="compose">Compose</string>
    <string name="new_chat">New chat</string>
    <string name="new_space">New space</string>
    <string name="new_meeting">New meeting</string>
    <string name="join_a_meeting">Join a Meeting</string>
    <string name="spaces_are_where_team_magic_happens_find_or_create_spaces_using_the_new_space_button">Spaces are where team magic happens. Find or create spaces using the new space button.</string>
    <string name="spaces">SPACES</string>
    <string name="meetings">MEETINGS</string>
    <string name="please_register_with_your_information">Please register with your information</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="to_me">to me</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply All</string>
    <string name="forward">Forward</string>
    <string name="inbox">INBOX</string>
    <string name="chat_1">CHAT</string>
    <string name="find_someone_to_chat_with_by_tapping_the_new_chat_button">Find someone to chat with by tapping the new chat button.</string>
    <string name="inbox_1">Inbox</string>
    <string name="lables">LABLES</string>
    <string name="starred">Starred</string>
    <string name="sent">Sent</string>
    <string name="snoozed">Snoozed</string>
    <string name="all_mail">All mail</string>
    <string name="spam">Spam</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_1">Settings</string>
    <string name="log_out">Log out</string>
    <string name="from">From</string>
    <string name="me">me</string>


</resources>