<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ComposeActivity">

    <include layout="@layout/compose_toolbar" />

    <!-- To -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyTextInputLayout_overlay_compose"
        android:hint="@string/to">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Subject -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyTextInputLayout_overlay_compose"
        android:hint="@string/subject">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Message -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyTextInputLayout_overlay_compose"
        android:hint="@string/message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:gravity="start|top" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
